; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_cipher.c_cipher_warning_message.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_cipher.c_cipher_warning_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sshcipher_ctx = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cipher_warning_message(%struct.sshcipher_ctx* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.sshcipher_ctx*, align 8
  store %struct.sshcipher_ctx* %0, %struct.sshcipher_ctx** %3, align 8
  %4 = load %struct.sshcipher_ctx*, %struct.sshcipher_ctx** %3, align 8
  %5 = icmp eq %struct.sshcipher_ctx* %4, null
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load %struct.sshcipher_ctx*, %struct.sshcipher_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.sshcipher_ctx, %struct.sshcipher_ctx* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %6, %1
  store i8* null, i8** %2, align 8
  br label %13

12:                                               ; preds = %6
  store i8* null, i8** %2, align 8
  br label %13

13:                                               ; preds = %12, %11
  %14 = load i8*, i8** %2, align 8
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
